@@ -58,6 +58,25 @@ def check_safestring(option, opt, value):
         raise optparse.OptionValueError(
             "option %s: invalid value: %r" % (opt, value))
 
+def varcopy_callback(option, opt_str, value, parser):
+    """callback method for copy and rcopy which take a variable number
+    of arguments."""
+    # based on http://docs.python.org/library/optparse.html?highlight=optionparser#callback-example-6-variable-arguments"""
+    assert value is None
+    value = []
+    for arg in parser.rargs:
+        # stop on --foo like options
+        if arg[:2] == "--":
+            break
+        # note: -foo like options are not filtered here
+        value.append(arg)
+    if not value:
+        raise optparse.OptionValueError( \
+            "%s option needs at least one argument" % opt_str)
+    del parser.rargs[:len(value)]
+    setattr(parser.values, option.dest, value)
+
+
 class Option(optparse.Option):
     """This Option subclass adds a new safestring type."""
     TYPES = optparse.Option.TYPES + ("safestring",)
@@ -152,8 +171,9 @@ class OptionParser(optparse.OptionParser):
     def install_filecopy_options(self):
         """Install file copying specific options"""
         optgrp = optparse.OptionGroup(self, "File copying")
-        optgrp.add_option("-c", "--copy", action="store", dest="source_path",
-                          help="copy local file or directory to the nodes")
+        optgrp.add_option("-c", "--copy", action="callback", dest="copyfiles",
+                          callback=varcopy_callback,
+                          help="copy local file or directory to remote nodes")
         optgrp.add_option("--dest", action="store", dest="dest_path",
                           help="destination file or directory on the nodes")
         optgrp.add_option("-p", action="store_true", dest="preserve_flag",
